--- a/Learning-HTML/Hello.html
+++ b/Learning-HTML/Hello.html
@@ -1,2 +1,27 @@
+<!--The Main Header-->
 <h1>Hello World</h1>
+
+<!--Header 2-->
 <h2>CatPhotoApp</h2>
+
+<!--A Paragraph-->
+<p>Hello Paragraph</p>
+
+<!--
+
+Lorem Ipsum is a great tool
+to generate filler text
+
+!-->
+
+<!--
+
+HTML introduces more descriptive 
+HTML tags. These include main, header
+footer, nav, video, article, section
+and others. Makes it easier to read
+and optimizes for SEO. The main tag
+helps search engines and developers
+find the main content of your page.
+
+-->
