--- a/Learning-HTML/Hello.html
+++ b/Learning-HTML/Hello.html
@@ -25,3 +25,32 @@ helps search engines and developers
 find the main content of your page.
 
 -->
+
+<!--
+
+I can images by using the img element 
+and point to a specific src attribute.
+
+E.g.
+
+<img src="https://www.freecatphotoapp.com/your-image.jpg">
+
+All images must have an alt attribute. The Text
+inside and alt attribute is used for screen readers
+to improve accesibility and is displayed if image
+fails to load. 
+
+Note: If the image is purely decorative, using
+and empty alt attri is best practice.
+
+<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="A business cat wearing a necktie.">
+
+-->
+
+<!--
+
+Link to external page with (a) anchor elements
+
+<a href="https://www.freecodecamp.org">this links to freecodecamp.org</a>
+
+-->
