--- a/Learning-HTML/Hello.html
+++ b/Learning-HTML/Hello.html
@@ -53,4 +53,18 @@ Link to external page with (a) anchor elements
 
 <a href="https://www.freecodecamp.org">this links to freecodecamp.org</a>
 
+Link to internal page with (a) anchor elements
+
+internal href's use # plus the value of the
+id attribute.
+
+Below is an example of an internal anchor link and its target element:
+
+<a href="#contacts-header">Contacts</a>
+...
+<h2 id="contacts-header">Contacts</h2>
+
+You can nest links within other text elemements
+
+
 -->
