--- a/Learning-HTML/CatPhotoApp.html
+++ b/Learning-HTML/CatPhotoApp.html
@@ -1,8 +1,20 @@
 <h2>CatPhotoApp</h2>
 
 <main>
+
+    <!--
+
+    <a href="#footer">Jump to Bottom</a>
+    
+    -->
+
+    
     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="Relaxing Cat">
     <p>itty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
     <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
     <a href="https://www.freecatphotoapp.com">cat photos</a>
+
 </main>
+
+<footer id="footer">Copyright Cat Photo App</footer>
+
