--- a/Learning-HTML/testing.html
+++ b/Learning-HTML/testing.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Head is the element where the meta data information
+is stored-->
+
 <head>
+    <!--Setting the charset enures the webpage will
+    display special symbols and chracters correctly-->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Discription in bar-->
+    <title>My First Webpage</title>
 </head>
 
+<!--Body will hold all of the content of the webpage-->
+
 <body>
+    <h1>Hello World</h1>
 </body>
 
 </html>
